# rookies_workout_2021

./: Linear_Regression_demo.ipynb  Linear_Regression_training.ipynb  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: custom.md
.github/PULL_REQUEST_TEMPLATE/: custom.md
LinearRegression/: Linear_Regression_demo.ipynb  Linear_Regression_training_ando.ipynb  Linear_Regression_training_taga.ipynb
Python_training/: flab_techniqs-2.ipynb
basic/: flab_techniqs.ipynb
github/: ando.md  main.md  taga.md
som/: 2018_som.ipynb  Untitled.ipynb  ando_som.py  ando_som_training.ipynb  flab_techniqs.ipynb  flab_techniqs_instance_ver.ipynb  flab_techniqs_taga.ipynb  som_taga.ipynb
som/sample/: README.md  data.py  main.py  params.py  som.py  utils.py  visualizer.py
ukr/ando/: TUKRsample.py  ando_TUKR.py  ando_ukr.ipynb  ando_ukr_training.py  data.py  dataTUKR.py  tensorflowtest.py  tensorflowtest2.py  test.py  ukr_gaussian.py
ukr/sample/: cross_test.py  cross_test_taga.py  somf.py  test.py  ukr_autograd.py  ukr_gaussian.py  ukr_taga.py  ukr_uniform.py  visualizer.py
ukr/taga/: cross_test_taga.py  data.py  ukr.py  ukr_gauss.py  ukr_gaussian.py  ukr_taga.ipynb  visualizer.py
