[tool.poetry]
name = "rookies_workout_2021"
version = "0.1.0"
description = "this package is created by miyazaki"
authors = ["TetraMiyazaki <kpasso1015@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
jax = "^0.2.12"
jaxlib = "^0.1.64"
scipy = "^1.6.2"
matplotlib = "^3.4.1"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
