[tool.poetry]
name = "rookies_workout_2021"
version = "0.1.0"
description = "this package is created by miyazaki"
authors = ["TetraMiyazaki <kpasso1015@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.2"
jax = "^0.2.12"
jaxlib = "^0.1.64"
matplotlib = "^3.4.1"
tqdm = "^4.59.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.0.12"
jupyterlab-git = "^0.23.3"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
